compose.yaml seems to mount /home correctly

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,10 @@ services:
         build: server/.
         ports:
             - "8000:8000"
+
+        volumes:
+            - /home:/home
+
+volumes:
+    home:
+
