--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,9 +8,9 @@ COPY . /app
 COPY ./src/app.py /app/src/
 # Install any needed dependencies specified in requirements.txt
 #RUN apt-get install -y  python3-all # libssl
-RUN apk add --no-cache libcrypto3 ssl_client
+RUN apk add --no-cache  openssl
 
-#RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout key.pem -out cert.pem
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout key.pem -out cert.pem -config csr.conf 
 
 # Make port available to the world outside this container
 EXPOSE 8008
