--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "vue": "^3.5.13",
-    "vue-router": "^4.0.13"
+    "vue-router": "4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vue-router": "4.0.13"
+
   }
 }
