--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.5.13",
-    "vue-router": "4.0.13"
+    "vue-router": "4.0.13",
+    "vue-toastification": "2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
