--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,11 @@
   "dependencies": {
     "vue": "^3.5.13",
     "vue-router": "4.0.13",
-    "vue-toastification": "2.0.0-rc.5"
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.0.1",
     "vue-router": "4.0.13"
-
   }
 }
