--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,7 @@ services:
         build: client/.
         ports:
             - "5173:5173"
+        network_mode: host 
     server:
         build: express/.
         ports:
