--- a/express/package.json
+++ b/express/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test",
-    "start": "node src/index.js"
+    "start": " node -r dotenv/config src/index.js dotenv_config_path=../env"
   },
   "author": "David Liebman",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "4.21.2",
     "multer": "^1.4.5-lts.1"
   }
