--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "path-browserify": "^1.0.1",
     "vue": "^3.5.13",
     "vue-router": "4.0.13",
     "vue3-toastify": "^0.2.8"
