set env vars in Docker compose file

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
+# for client
+VITE_HOST="xlocalhost"
 
-VITE_HOST="localhost"
-
-HOST="localhost"
+# host for express server to listen at.
+HOST="xlocalhost"
