--- a/compose.yaml
+++ b/compose.yaml
@@ -4,17 +4,22 @@ services:
         ports:
             - "5173:5173"
         networks: 
-            - mynetwork 
+            - backend 
         environment:
             - VITE_HOST=localhost
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
     server:
         build: express/.
         ports:
             - "8008:8008"
         networks: 
-            - mynetwork
+            - backend 
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
         environment:
-            - HOST=0.0.0.0
+            - HOST=host.docker.internal
+            - HOST_IP=host.docker.internal
         volumes:
             - /home:/home
 
@@ -22,4 +27,4 @@ volumes:
     home:
 
 networks:
-    mynetwork:
+    backend:
