--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
         networks: 
             - backend 
         environment:
-            - VITE_HOST=localhost
+            - VITE_HOST=192.168.0.147
         extra_hosts:
             - "host.docker.internal:host-gateway"
     server:
@@ -18,7 +18,7 @@ services:
         extra_hosts:
             - "host.docker.internal:host-gateway"
         environment:
-            - HOST=host.docker.internal
+            - HOST=localhost
             - HOST_IP=host.docker.internal
         volumes:
             - /home:/home
