--- a/compose.yaml
+++ b/compose.yaml
@@ -6,20 +6,24 @@ services:
         networks: 
             - backend 
         environment:
-            - VITE_HOST=192.168.0.147
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
+            - VITE_HOST=server
+        container_name: "client"
+        links:
+            - "server:express"
+            #extra_hosts:
+            #- "host.docker.internal:host-gateway"
     server:
         build: express/.
         ports:
             - "8008:8008"
         networks: 
             - backend 
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
+            #extra_hosts:
+            #- "host.docker.internal:host-gateway"
         environment:
             - HOST=localhost
             - HOST_IP=host.docker.internal
+        container_name: "server"
         volumes:
             - /home:/home
 
