--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,12 +1,12 @@
 
- server { 
- listen 5173;
- location / {
-   # This would be the directory where your React app's static files are stored at
-   proxy_set_header Host $host;
-   root /usr/share/nginx/html;
-   try_files $uri $uri/ /index.html;
- }
+server { 
+    listen 5173;
+    location / {
+        # This would be the directory where your React app's static files are stored at
+        #proxy_set_header Host $host;
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
  
  
 }
