--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -6,6 +6,18 @@ server {
         #proxy_set_header Host $host;
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
+
+    }
+ 
+ 
+}
+
+server { 
+    listen 8008;
+    location /users {
+        proxy_pass http://server:8008/users;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
  
  
