--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,10 @@ services:
         networks: 
             - backend 
         environment:
-            - VITE_HOST=host.docker.internal 
+            - VITE_HOST=backend 
         container_name: "client"
+        depends_on:
+            - server
         extra_hosts:
             - "host.docker.internal:host-gateway"
     server:
