--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,15 @@
 
 server { 
-    listen 5173;
+    listen 80;
     location / {
         # This would be the directory where your React app's static files are stored at
         #proxy_set_header Host $host;
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        #root /usr/share/nginx/html;
+        #try_files $uri $uri/ /index.html;
+        proxy_pass http://client:5173;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     }
  
@@ -18,6 +22,7 @@ server {
         proxy_pass http://server:8008/users;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
  
  
