--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,5 @@
 
+
 server { 
     listen 80;
     location / {
@@ -18,14 +19,43 @@ server {
 
 server { 
     listen 8008;
+    server_name server;
+
+    #location / {
+    #proxy_pass http://server:8001;
+        #proxy_set_header Host $host;
+        #proxy_set_header X-Real-IP $remote_addr;
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #}
+ 
     location /users {
-        proxy_pass http://server:8008/users;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://server:8001/users;
     }
- 
- 
+    location /config {
+        proxy_pass http://server:8001/config;
+    }
+    location /listbackup {
+        proxy_pass http://server:8001/listbackup;
+    }
+    location /backup {
+        proxy_pass http://server:8001/backup;
+    }
+    location /restart {
+        proxy_pass http://server:8001/restart;
+    }
+    location /restore {
+        proxy_pass http://server:8001/restore;
+    }
+    location /file {
+        proxy_pass http://server:8001/file;
+    }
+    location /credential {
+        proxy_pass http://server:8001/credential;
+    }
+
+
+
+
 }
 
 
