--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
         networks: 
             - backend 
         environment:
-            - VITE_HOST=localhost 
+            - VITE_HOST=172.17.0.1
         container_name: "client"
         depends_on:
             - server
@@ -22,7 +22,7 @@ services:
             - "host.docker.internal:host-gateway"
         environment:
             - PORT=8001
-            - HOST=server
+            - HOST=server # not used
         container_name: "server"
         volumes:
             - /home:/home
@@ -36,6 +36,9 @@ services:
         container_name: "nginx"
         depends_on:
             - server
+            - client
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
 
 
 
