--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,13 +4,10 @@ server {
     listen 80;
     location / {
         # This would be the directory where your React app's static files are stored at
-        #proxy_set_header Host $host;
-        #root /usr/share/nginx/html;
-        #try_files $uri $uri/ /index.html;
         proxy_pass http://client:5173;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #proxy_set_header Host $host;
+        #proxy_set_header X-Real-IP $remote_addr;
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     }
  
@@ -18,8 +15,8 @@ server {
 }
 
 server { 
-    listen 8008;
-    server_name server;
+    listen *:8008;
+    server_name "client";
 
     #location / {
     #proxy_pass http://server:8001;
@@ -30,6 +27,10 @@ server {
  
     location /users {
         proxy_pass http://server:8001/users;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
     }
     location /config {
         proxy_pass http://server:8001/config;
