--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
         networks: 
             - backend 
         environment:
-            VITE_HOST: server
+            VITE_REMOTE: server
         container_name: "client"
         depends_on:
             - server
