--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,8 +15,7 @@ server {
 }
 
 server { 
-    listen *:8008;
-    server_name "client";
+    listen 8008;
 
     #location / {
     #proxy_pass http://server:8001;
