--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -3,7 +3,9 @@
 server { 
     listen 80;
     location / {
-        proxy_pass http://client:5173;
+        root /usr/share/nginx/html;
+
+        # proxy_pass http://client:5173;
     }
 }
 
