.env file works throughout build process with vite

--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -7,10 +7,8 @@ server {
 
         # proxy_pass http://client:5173;
     }
-}
 
-server { 
-    listen 8008;
+    # listen 8008;
     location /users {
         proxy_pass http://server:8001/users;
         proxy_set_header Host $host;
