--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,3 @@
-# for client
-VITE_HOST="xlocalhost"
-
-# host for express server to listen at.
-HOST="xlocalhost"
+# env
+VITE_REMOTE_PORT=8001
+VITE_REMOTE=192.168.0.164
