--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,8 @@ services:
             - "host.docker.internal:host-gateway"
     server:
         build: express/.
+        ports:
+            - "8001:8001"
         networks: 
             - backend 
         extra_hosts:
