add 'api' to server/backend calls

--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -9,33 +9,33 @@ server {
     }
 
     # listen 8008;
-    location /users {
-        proxy_pass http://server:8001/users;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location /api/users {
+        proxy_pass http://server:8001/api/users;
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     }
-    location /config {
-        proxy_pass http://server:8001/config;
+    location /api/config {
+        proxy_pass http://server:8001/api/config;
     }
-    location /listbackup {
-        proxy_pass http://server:8001/listbackup;
+    location /api/listbackup {
+        proxy_pass http://server:8001/api/listbackup;
     }
-    location /backup {
-        proxy_pass http://server:8001/backup;
+    location /api/backup {
+        proxy_pass http://server:8001/api/backup;
     }
-    location /restart {
-        proxy_pass http://server:8001/restart;
+    location /api/restart {
+        proxy_pass http://server:8001/api/restart;
     }
-    location /restore {
-        proxy_pass http://server:8001/restore;
+    location /api/restore {
+        proxy_pass http://server:8001/api/restore;
     }
-    location /file {
-        proxy_pass http://server:8001/file;
+    location /api/file {
+        proxy_pass http://server:8001/api/file;
     }
-    location /credential {
-        proxy_pass http://server:8001/credential;
+    location /api/credential {
+        proxy_pass http://server:8001/api/credential;
     }
 
 }
