--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -8,35 +8,34 @@ server {
         # proxy_pass http://client:5173;
     }
 
-    # listen 8008;
-    location /api/users {
-        proxy_pass http://server:8001/api/users;
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location /api/ {
+        proxy_pass http://server:8001/api/;
+    }
 
-    }
-    location /api/config {
-        proxy_pass http://server:8001/api/config;
-    }
-    location /api/listbackup {
-        proxy_pass http://server:8001/api/listbackup;
-    }
-    location /api/backup {
-        proxy_pass http://server:8001/api/backup;
-    }
-    location /api/restart {
-        proxy_pass http://server:8001/api/restart;
-    }
-    location /api/restore {
-        proxy_pass http://server:8001/api/restore;
-    }
-    location /api/file {
-        proxy_pass http://server:8001/api/file;
-    }
-    location /api/credential {
-        proxy_pass http://server:8001/api/credential;
-    }
+    #location /api/users {
+    #    proxy_pass http://server:8001/api/users;
+    #}
+    #location /api/config {
+    #    proxy_pass http://server:8001/api/config;
+    #}
+    #location /api/listbackup {
+    #    proxy_pass http://server:8001/api/listbackup;
+    #}
+    #location /api/backup {
+    #    proxy_pass http://server:8001/api/backup;
+    #}
+    #location /api/restart {
+    #    proxy_pass http://server:8001/api/restart;
+    #}
+    #location /api/restore {
+    #    proxy_pass http://server:8001/api/restore;
+    #}
+    #location /api/file {
+    #    proxy_pass http://server:8001/api/file;
+    #}
+    #location /api/credential {
+    #    proxy_pass http://server:8001/api/credential;
+    #}
 
 }
 
