--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -5,37 +5,12 @@ server {
     location / {
         root /usr/share/nginx/html;
 
-        # proxy_pass http://client:5173;
     }
 
     location /api/ {
+        proxy_bind $server_addr; 
         proxy_pass http://server:8001/api/;
     }
-
-    #location /api/users {
-    #    proxy_pass http://server:8001/api/users;
-    #}
-    #location /api/config {
-    #    proxy_pass http://server:8001/api/config;
-    #}
-    #location /api/listbackup {
-    #    proxy_pass http://server:8001/api/listbackup;
-    #}
-    #location /api/backup {
-    #    proxy_pass http://server:8001/api/backup;
-    #}
-    #location /api/restart {
-    #    proxy_pass http://server:8001/api/restart;
-    #}
-    #location /api/restore {
-    #    proxy_pass http://server:8001/api/restore;
-    #}
-    #location /api/file {
-    #    proxy_pass http://server:8001/api/file;
-    #}
-    #location /api/credential {
-    #    proxy_pass http://server:8001/api/credential;
-    #}
 
 }
 
