--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location /api/ {
-        proxy_bind $server_addr; 
+        proxy_bind $remote_addr; 
         proxy_pass http://server:8001/api/;
     }
 
