--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,7 +1,7 @@
 
 
 server { 
-    listen 80;
+    listen 80 bind;
     location / {
         root /usr/share/nginx/html;
 
@@ -9,7 +9,8 @@ server {
 
     location /api/ {
         # proxy_bind $remote_addr; 
-        proxy_pass http://server:8001/api/;
+        proxy_bind $server_addr;
+        proxy_pass http://$server_addr:8001/api/;
     }
 
 }
