--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -10,7 +10,7 @@ server {
     location /api/ {
         # proxy_bind $remote_addr; 
         proxy_bind $server_addr;
-        proxy_pass http://$server_addr:8001/api/;
+        proxy_pass http://server:8001/api/;
     }
 
 }
