add user_dir.env to config so far

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,9 @@ services:
         build: client/.
         ports:
             - "80:80"
-        env_file: "./env/client.env"
+        env_file: 
+            - ./env/client.env 
+            - ./env/user_dir.env
         container_name: "client"
         depends_on:
             - server
@@ -12,7 +14,9 @@ services:
         build: express/.
         ports:
             - "8001:8001"
-        env_file: "./env/server.env"
+        env_file: 
+            - ./env/server.env
+            - ./env/user_dir.env
         container_name: "server"
         volumes:
             - /home:/home
